# compare

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  USER_GUIDE.md  docker-compose.yml  ecosystem.config.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: workflows
.github/workflows/: deploy.yml  release.yml
docs/: acceptance-criteria.md  quick-start.md  test-cases.md
src/: App-enhanced.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/diff_engine/: mod.rs
src-tauri/src/exporter/: mod.rs
src-tauri/src/file_parser/: mod.rs
src-tauri/src/tests/: mod.rs
src/components/: BatchComparisonQueue.tsx  ControlPanel.tsx  DiffViewer.tsx  DualPaneView.tsx  ExportModal.tsx  NavigationBar.tsx  SettingsModal.tsx  StatsPanel.tsx  TextInput.tsx
src/components/ui/: button.tsx
src/hooks/: useDiff.ts  useKeyboard.ts  useWebWorker.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: chineseTokenizer.ts  diffEngine.ts  exporters.ts  helpers.ts
src/workers/: diff.worker.ts
