[workspace]
members = ["src-tauri", "wasm"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Text Diff Team"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# Diff相关
similar = "2.3"
diff = "0.1"

# 文件解析
docx-rs = "0.4"
lopdf = "0.31"
zip = "0.6"
scraper = "0.17"
pulldown-cmark = "0.9"
html-escape = "0.2"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# 测试
criterion = "0.5"
proptest = "1.4"